Implementação de cenário para validar impossibilidade de duplicar setup de emissor

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-addopts = -s -n 5 # Run tests in parallel with 5 workers and show output
+addopts = -s -n 7
 filterwarnings =
     ignore::DeprecationWarning
